fix: HTML table text alignment issues (#1086)
* Using classes instead of inline css, fixed up a few text alignment mismatches

* Centered column

--- a/styles/global.css
+++ b/styles/global.css
@@ -194,6 +194,18 @@ button:enabled:hover {
   transform: rotate(180deg);
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .table-icon-ctn {
   width: 100%;
   display: flex;
